# git-pulse

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
Formula/: git-pulse.rb
git_pulse/: __init__.py  cache.py  cli.py  config.py  connectivity.py  daemon.py  logger.py  scanner.py  updater.py
tests/: conftest.py
tests/e2e/: conftest.py  test_cli.py
tests/helpers/: git_helpers.py
tests/integration/: conftest.py  test_scanner_cache.py  test_updater.py
tests/unit/: conftest.py  test_cache.py  test_config.py  test_connectivity.py  test_daemon.py  test_logger.py  test_updater_helpers.py
